--- a/.github/workflows/AI_Coach.yml
+++ b/.github/workflows/AI_Coach.yml
@@ -1,4 +1,4 @@
-name: Scheduled API Test Runs
+name: AI Coach Staging API Testing
 
 on:
   workflow_dispatch:
@@ -12,39 +12,47 @@ jobs:
       BASE_URL: "https://Vishal580.github.io/API-Automation-using-RestAssured"
 
     steps:
+      # Step 1: Checkout the repository
       - uses: actions/checkout@v4
 
+      # Step 2: Set up JDK
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: zulu
           java-version: 21
 
+      # Step 3: Install Allure
       - name: Install Allure
         run: |
           curl -o allure-2.13.8.tgz -OLs https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.13.8/allure-commandline-2.13.8.tgz
           sudo tar -zxvf allure-2.13.8.tgz -C /opt/
           sudo ln -s /opt/allure-2.13.8/bin/allure /usr/bin/allure
 
+      # Step 4: Run API tests
       - name: Run tests
         id: test_run
         run: mvn clean test -Dtestng=testng.xml
 
-      - name: Publish Allure results
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-results
-          path: allure-results
+      #      # Step 5: Upload Allure test results
+      #      - name: Publish Allure results
+      #        uses: actions/upload-artifact@v4
+      #        with:
+      #          name: allure-results
+      #          path: allure-results
 
+      # Step 6: Generate Allure report
       - name: Generate Allure report
         run: allure generate allure-results --clean -o allure-report
 
+      # Step 7: Upload Allure report
       - name: Publish Allure report
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: allure-report
 
+      # Step 8: Load report history from gh-pages branch
       - name: Load test report history
         uses: actions/checkout@v4
         if: always()
@@ -53,6 +61,7 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
+      # Step 9: Build Allure report with history
       - name: Build test report
         uses: simple-elf/allure-report-action@v1.7
         if: always()
@@ -61,6 +70,7 @@ jobs:
           allure_history: allure-history
           allure_results: allure-results
 
+      # Step 10: Publish test report
       - name: Publish test report
         id: publish_report
         uses: peaceiris/actions-gh-pages@v4
@@ -70,14 +80,14 @@ jobs:
           publish_branch: gh-pages
           publish_dir: allure-history
 
-      # Set the GitHub Pages deployment URL with the unique workflow run number
+      # Step 11: Set deployment URL for the report
       - name: Set Deployment URL
-        if: always()  # Ensure this step runs after publishing the report
+        if: always()
         run: |
           echo "DEPLOYMENT_URL=${{ env.BASE_URL }}/${{ github.run_number }}/#" >> $GITHUB_ENV
           echo "Deployment URL is set to ${{ env.DEPLOYMENT_URL }}"
 
-
+      # Step 12: Send Email Notification if tests fail
       - name: Send Email Notification
         if: failure()   # Only send if there were test failures
         uses: dawidd6/action-send-mail@v3
@@ -85,10 +95,10 @@ jobs:
           server_address: smtp.gmail.com
           server_port: 587
           username: vishalkhetriba@gmail.com
-          password: hxuk gvrq oelg lupo  # Use GitHub secret for security
-          subject: 'Test Results Notification'
+          password: ${{ secrets.EMAIL_PASSWORD }}  # Use GitHub secret for security
+          subject: '⚠️ Test Failure Alert of AI Coach [Staging]: Immediate Attention Required'
           body: |
-            The API tests have failed. You can review the test report at the following URL:
+            The API tests encountered failures. You can review the test report by visiting the following URL:
             ${{ env.DEPLOYMENT_URL }}
           to: vishal@frugaltestingin.com,yogeshk@frugaltesting.com
           from: vishalkhetriba@gmail.com
