--- a/.github/workflows/AI_Coach.yml
+++ b/.github/workflows/AI_Coach.yml
@@ -32,7 +32,9 @@ jobs:
       # Step 4: Run API tests
       - name: Run tests
         id: test_run
-        run: mvn clean test -Dtestng=testng.xml
+        run: |
+          set -e  # Exit immediately if any command fails
+          mvn clean test -Dmaven.test.failure.ignore=false -Dtestng=testng.xm
         continue-on-error: false  # This ensures workflow stops if tests fail
 
       #      # Step 5: Upload Allure test results
